--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -7,7 +7,7 @@
     <section class="top-vente col-lg-10 col-11 mx-auto my-5">
     <h2 class="text-center text-secondary mb-5">NOS PRODUITS</h2>
 
-    <div class="row my-5 mx-auto">
+    <div class="row my-5 mx-auto text-secondary">
         <div class="col-lg-2 col-6">
             {{ form_start(form) }}
             {{ form_row(form.title) }}
@@ -39,11 +39,12 @@
 						<div class="card">
 							<img src="{{ product.photo }}" class="card-img-top" alt="" height="300px">
 							<div class="card-body">
-								<h4 class="card-title text-secondary">{{ product.title }}</h4>
+								<h4 class="text-secondary fs-3 mb-3">{{ product.title }}</h4>
 								<div class="d-flex flex-row justify-content-between">
 									<p class="badge bg-pink text-light">{{ product.category.name }}</p>
 									<p class="card-text text-pink">{{ product.prix }}€</p>
 								</div>
+								<a href="{{ path('cart_add', {'id': product.id}) }}" class="fs-5 col-6 offset-3 btn btn-secondary text-light"><i class="bi bi-cart-plus"></i>Ajouter au panier</a>
 							</div>
 							<div class="card-footer">
       							<small class="text-muted">Créé le {{ product.createdAt|date('d/m/Y') }}</small>
