--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -4,9 +4,18 @@
 {% endblock %}
 {% block body %}
 	<div class="container my-5">
-		<h2 class="text-center mt-5 mb-3 fs-1">Contactez-nous</h2>
+
+		{% for message in app.flashes('message') %}
+    		
+        	<div class="alert alert-success">
+            	{{ message }}
+        	</div>
+			
+    	{% endfor %}
+
+		<h2 class="text-center mt-5 mb-3 fs-1 text-secondary">Contactez-nous</h2>
 		<div class="row d-flex justify-content-center">
-			<div class="col-8 border rounded border-secondary shadow mb-5 m-3 p-4 bg-primary">
+			<div class="col-8 border rounded border-secondary shadow mb-5 m-3 p-4 bg-primary text-secondary fs-4">
 				{{ form_start(contact) }}
               
 				{{ form_row(contact.last_name) }}
