--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -54,14 +54,15 @@
 			{% for product in products %}
 				<div class="col-sm-6 col-md-4 mb-5">
 					<a href="{{ path('product_show', {'id': product.id}) }}">
-						<div class="card">
+					<div class="card">
 							<img src="{{ product.photo }}" class="card-img-top" alt="" height="300px">
 							<div class="card-body">
-								<h4 class="card-title text-secondary">{{ product.title }}</h4>
+								<h4 class="text-secondary fs-3 mb-3">{{ product.title }}</h4>
 								<div class="d-flex flex-row justify-content-between">
 									<p class="badge bg-pink text-light">{{ product.category.name }}</p>
 									<p class="card-text text-pink">{{ product.prix }}€</p>
 								</div>
+								<a href="{{ path('cart_add', {'id': product.id}) }}" class="fs-5 col-6 offset-3 btn btn-secondary text-light"><i class="bi bi-cart-plus"></i>Ajouter au panier</a>
 							</div>
 							<div class="card-footer">
       							<small class="text-muted">Créé le {{ product.createdAt|date('d/m/Y') }}</small>
