--- a/templates/includes/_navbar.html.twig
+++ b/templates/includes/_navbar.html.twig
@@ -47,30 +47,30 @@
       </ul>
       <div class="panier d-flex justify-content-lg-end justify-content-center">
       
-        <a class="nav-link active text-light" href=""><img src="{{ asset('build/images/panier.png') }}"
+        <a class="nav-link active text-light" href="{{ path('cart_index') }}"><img src="{{ asset('build/images/panier.png') }}"
                           class="text-light" alt="panier" width="30">Mon panier</a>
                   
-        
-        
-        <a class="nav-link active text-light" href=""><img src="{{ asset('build/images/user.png') }}"
+   {% if not app.user %}     
+        <a class="nav-link active text-light" href="{{ path('app_login') }}"><img src="{{ asset('build/images/user.png') }}"
                           class="text-light " alt="user" width="30">Mon compte</a>
-        
-       
-                  
-                  {#
-                  {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-  
-                  Bienvenue {{ app.user.firstname }} !
-                  <a class="nav-link btn btn-secondary" href="{{ path('app_logout') }}">Deconnexion</a>
-  
-                  {% else %}
-  
-                  <a class="nav-link btn btn-secondary" href="{{ path('app_login') }}">Se connecter</a>
-  
-                  {% endif %} #}
-                  
-              </div>
-
-    </div>
+  {% else %}
+				<div class="dropdown btn btn-secondary fs-5">
+          <a class="nav-link dropdown-toggle text-light" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+             Bienvenue <span class="text-pink">{{ app.user.firstname }}</span>
+          </a>
+          <ul class="dropdown-menu shadow-lg w-100" aria-labelledby="dropdownMenuLink">
+            <li>
+							<a class="dropdown-item text-wrap bg-secondary text-light fw-bold" href="{{ path('product_new') }}">
+							<i class="bi bi-person-lines-fill text-light"></i> &nbsp; Créer des produits</a>
+						</li>                                         
+						<li>	
+								<a class="dropdown-item text-wrap bg-secondary text-light fw-bold" href="{{ path('app_logout') }}">
+                <i class="bi bi-power text-light"></i>&nbsp; Déconnexion
+                </a>
+            </li>                  
+          </ul>
+        </div>
+  {% endif %}   
+    
   </div>
 </nav>
