--- a/templates/product/_form.html.twig
+++ b/templates/product/_form.html.twig
@@ -1,4 +1,4 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <button class="mt-3 btn btn-secondary text-light col-lg-4 offset-lg-4 col-6 offset-3">{{ button_label|default('Valider') }}</button>
 {{ form_end(form) }}
