--- a/templates/includes/_searchbar.html.twig
+++ b/templates/includes/_searchbar.html.twig
@@ -1,10 +1,10 @@
-        <div class="promotion-text d-flex justify-content-between mb-2">
-            <div class="text-secondary mt-2">
+        <div class="bg-intermediary d-flex justify-content-between mb-2">
+            <div class="text-secondary mt-2 w-100">
                 <marquee direction="right">
                     <p>10 % sur votre 1ère commande avec le CODE joliepiquese10</p>
                 </marquee>
             </div>
-            <div class="text-center text-secondary">
+            <div class="text-end text-secondary w-100">
                 <a class="nav-item nav-link text-secondary" href="{{ path('contact') }}"><img src="{{ asset('build/images/envelope.svg') }}" alt="panier"width="30">
                 <p class="d-none d-md-inline">Contactez-nous</p>
                 </a>
