--- a/templates/product/edit.html.twig
+++ b/templates/product/edit.html.twig
@@ -1,13 +1,19 @@
 {% extends 'base.html.twig' %}
-
+  {% form_theme form 'bootstrap_4_layout.html.twig' %}
 {% block title %}Edit Product{% endblock %}
 
 {% block body %}
-    <h1>Edit Product</h1>
+   <div class="container my-5">
+		<h2 class="text-center mb-3 fs-1 text-secondary">Éditer un produit</h2>
+		<div class="row d-flex justify-content-center mb-5">
+			<div class="col-lg-8 col-11 border rounded border-secondary shadow mb-5 m-3 p-4 bg-primary text-secondary fs-4">
+           
+    {{ include('product/_form.html.twig', {'button_label': 'Valider'}) }}
 
-    {{ include('product/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('product_index') }}">back to list</a>
+     <a href="{{ path('product_index') }}">Retour à la liste des produits</a>
 
     {{ include('product/_delete_form.html.twig') }}
+            </div>
+        </div>
+    </div>
 {% endblock %}
