--- a/templates/admin_category/_form.html.twig
+++ b/templates/admin_category/_form.html.twig
@@ -1,4 +1,4 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <button class="btn btn-secondary text-light mt-3 col-lg-3 offset-lg-5 col-6 offset-3">{{ button_label|default('Valider') }}</button>
 {{ form_end(form) }}
