--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -15,7 +15,7 @@
 
 		<h2 class="text-center mt-5 mb-3 fs-1 text-secondary">Contactez-nous</h2>
 		<div class="row d-flex justify-content-center">
-			<div class="col-8 border rounded border-secondary shadow mb-5 m-3 p-4 bg-primary text-secondary fs-4">
+			<div class="col-lg-8 col-11 border rounded border-secondary shadow mb-5 m-3 p-4 bg-primary text-secondary fs-4">
 				{{ form_start(contact) }}
               
 				{{ form_row(contact.last_name) }}
