--- a/templates/includes/_banner.html.twig
+++ b/templates/includes/_banner.html.twig
@@ -6,7 +6,7 @@
        <img src = "{{ asset('build/images/clothes.png') }}" alt="" class="container-fluid p-0 d-none d-lg-block ">                                   
     </div>  
         <h1 class="mt-5 p-5 text-center d-none d-sm-block text-uppercase position-absolute top-50 start-50 translate-middle fw-bold bg-intermediary shadow-lg p-3 mb-5 bg-body" style="color:#ff6582; font-size:40px;opacity:0.8; border-radius:10px">
-       JOLIE PIQUESE - Vêtements enfants à petit prix
+       JOLIE PIQUEUSE - Vêtements enfants à petit prix
         </h1>
      
 </div>
