--- a/templates/includes/_footer.html.twig
+++ b/templates/includes/_footer.html.twig
@@ -1,21 +1,22 @@
-<div class="footer  fixed-bottom">
+<div class="footer">
     <div class="row bg-secondary p-2">
-        <div class="col-lg-2 mt-2 d-flex justify-content-center align-items-center mb-5 mb-lg-0">
-            <img class="border bg-light rounded-circle me-3" src="{{ asset('build/images/babyiconfree.png') }}" width="60px"
-              height="60px" alt="logo-baby-shop">
-            <a href="" class="text-light text-uppercase fw-bold fs-5">Jolie piquese</a>
-  
+        <div class="col-lg-4 d-flex flex-column justify-content-center mx-auto mb-lg-0">
+               <div class="d-flex flex-row justify-content-lg-start justify-content-center align-items-center">
+                    <img class="my-3 border bg-light rounded-circle me-3" src="{{ asset('build/images/babyiconfree.png') }}" width="60px"
+                    height="60px" alt="logo-baby-shop">
+                    <a href="" class="text-light text-uppercase fw-bold fs-5">Jolie piqueuse</a>
+                </div>
+                <p class="text-light d-none d-md-block"> Téléphone: 06.01.02.03.04</p>
+                <p class="text-light d-none d-md-block"> Address: 6 Rue Gustave Flaubert 45100 Orléans</p>
         </div>
-        <div class="col-lg-6 col-sm-12 d-flex flex-column justify-content-center mx-auto mb-4 mb-lg-0">
+        <div class="col-lg-4 col-sm-12 d-flex flex-column justify-content-center mx-auto mb-2 mb-lg-0">
            
-            <a href="" class="text-center text-white fw-bold text-uppercase">Abonnez-vous</a> 
+            <a href="" class="text-center text-light fw-bold text-uppercase">Inscrivez-vous</a> 
                     <div class="d-flex flex-row justify-content-center">
-                        <a class="btn border rounded bg-light text-secondary fs-5 me-2" href="{{ path('app_register') }}" style="width:120px;">Je m'abonne</a>
+                        <a class="btn border rounded bg-light text-secondary fs-5 me-2" href="{{ path('app_register') }}" style="width:120px;">Je m'inscris</a>
                        </div>        
-                
-            
         </div>
-        <div class="col-lg-3 mt-4 d-flex flex-column justify-content-center mx-auto">
+        <div class="col-lg-4 mt-4 d-flex flex-column justify-content-center mx-auto">
             
             <p class="text-light text-center text-lg-end">SUIVEZ-NOUS !</p>
             <div class="d-flex justify-content-lg-end justify-content-center flex-row fw-bold text-white">
