--- a/templates/product/_delete_form.html.twig
+++ b/templates/product/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('product_delete', {'id': product.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ product.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-secondary text-light col-lg-4 offset-lg-4 col-6 offset-3">Supprimer</button>
 </form>
